--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bottom_color">#E91E63</color>
     <color name="background_color">#FFECB3</color>
+    <color name="game_over_overlay">#80000000</color>
 </resources>
