--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,52 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="36"
+    android:viewportHeight="36">
+  <group android:scaleX="0.48"
+      android:scaleY="0.48"
+      android:translateX="9.36"
+      android:translateY="9.36">
+
+      <path
+          android:fillColor="#DD2E44"
+          android:pathData="M15 27v6s0 3 3 3s3-3 3-3v-6h-6z" />
+      <path
+          android:fillColor="#BE1931"
+          android:pathData="M15 33l0.001 0.037 c1.041-0.035 2.016-0.274 2.632-1.286a0.426 0.426 0 0 1 0.735 0c0.616 1.011 1.591 1.251 2.632 1.286V27h-6v6z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M31.954 21.619c0 6.276-5 6.276-5 6.276h-18s-5 0-5-6.276c0-6.724 5-18.619 14-18.619s14 12.895 14 18.619z" />
+      <path
+          android:fillColor="#F4C7B5"
+          android:pathData="M18 20c-7 0-10 3.527-10 6.395a5.5 5.5 0 0 0 5.5 5.5c1.605 0 3.042-0.664 4.049-2.767a0.495 0.495 0 0 1 0.901 0c1.007 2.103 2.445 2.767 4.049 2.767a5.5 5.5 0 0 0 5.5-5.5C28 23.527 25 20 18 20z" />
+      <path
+          android:fillColor="#292F33"
+          android:pathData="M15 22.895c-1 1 2 4 3 4s4-3 3-4s-5-1-6 0zM13 19c-1.1 0-2-0.9-2-2v-2c0-1.1 0.9 -2 2-2s2 0.9 2 2v2c0 1.1-0.9 2-2 2zm10 0c-1.1 0-2-0.9-2-2v-2c0-1.1 0.9 -2 2-2s2 0.9 2 2v2c0 1.1-0.9 2-2 2z" />
+      <path
+          android:fillColor="#662113"
+          android:pathData="M15 3.608C13.941 2.199 11.681 0.881 2.828 4.2C-1.316 5.754 0.708 17.804 3.935 18.585c1.106 0 4.426 0 4.426-8.852c0-0.22-0.002-0.423-0.005-0.625C10.35 6.298 12.5 4.857 15 3.608zm18.172 0.592 C24.319 0.881 22.059 2.199 21 3.608c2.5 1.25 4.65 2.691 6.644 5.501c-0.003 0.201 -0.005 0.404 -0.005 0.625 c0 8.852 3.319 8.852 4.426 8.852c3.227-0.782 5.251-12.832 1.107-14.386z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 23.5 25 C 23.7761423749 25 24 25.2238576251 24 25.5 C 24 25.7761423749 23.7761423749 26 23.5 26 C 23.2238576251 26 23 25.7761423749 23 25.5 C 23 25.2238576251 23.2238576251 25 23.5 25 Z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 11.5 25 C 11.7761423749 25 12 25.2238576251 12 25.5 C 12 25.7761423749 11.7761423749 26 11.5 26 C 11.2238576251 26 11 25.7761423749 11 25.5 C 11 25.2238576251 11.2238576251 25 11.5 25 Z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 25.5 27 C 25.7761423749 27 26 27.2238576251 26 27.5 C 26 27.7761423749 25.7761423749 28 25.5 28 C 25.2238576251 28 25 27.7761423749 25 27.5 C 25 27.2238576251 25.2238576251 27 25.5 27 Z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 10.5 27 C 10.7761423749 27 11 27.2238576251 11 27.5 C 11 27.7761423749 10.7761423749 28 10.5 28 C 10.2238576251 28 10 27.7761423749 10 27.5 C 10 27.2238576251 10.2238576251 27 10.5 27 Z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 23 27 C 23.5522847498 27 24 27.4477152502 24 28 C 24 28.5522847498 23.5522847498 29 23 29 C 22.4477152502 29 22 28.5522847498 22 28 C 22 27.4477152502 22.4477152502 27 23 27 Z" />
+      <path
+          android:fillColor="#D99E82"
+          android:pathData="M 13 27 C 13.5522847498 27 14 27.4477152502 14 28 C 14 28.5522847498 13.5522847498 29 13 29 C 12.4477152502 29 12 28.5522847498 12 28 C 12 27.4477152502 12.4477152502 27 13 27 Z" />
+      <path
+          android:fillColor="#380F09"
+          android:pathData="M9.883 7.232c-0.259-0.673-0.634-1.397-1.176-1.939a0.999 0.999 0 1 0-1.414 1.414c0.57 0.57 1.066 1.934 1.068 2.346c0.145-0.404 0.839 -1.15 1.522-1.821zm16.217 0c0.259-0.672 0.634 -1.397 1.176-1.939a0.999 0.999 0 1 1 1.414 1.414c-0.57 0.57 -1.066 1.934-1.068 2.346c-0.145-0.404-0.839-1.15-1.522-1.821z" />
+  </group>
 </vector>
